Bump Java baseline to 25 and fix JDK 25 build
Prepare the Lucene 11 integration line for Java 25, which Lucene 11
bytecode requires. This raises the baseline and fixes every JDK-25-only
compile break on the current Lucene 10.6 snapshot, keeping -Werror and
full doclint enabled. No Lucene 11 API changes are included.

Toolchain and baseline:
- minimumRuntimeVersion and minimumCompilerVersion: 21 -> 25, so
  build-logic projects agree on the target and avoid variant mismatches.
- gradle-daemon-jvm.properties regenerated to Temurin Java 25.
- ElasticsearchJavaBasePlugin: keep -Werror and -Xdoclint:all, but
  exclude dangling-doc-comments, a stylistic category JDK 25 enables
  under -Xlint:all that fires on section-separator comments repo-wide.

Multi-release JAR consolidation:
- A version-specific source set must be at or above the base compiler
  version, so main22 is no longer valid. Promoted the Java 22
  implementations into src/main and removed main22 for cli-terminal
  (ConsoleUtil) and foreign-adapter (Arena/Linker/MemorySegment*).

Java 25 API adaptation:
- StructuredTaskScope is now an interface created through static open()
  factories. The entitlement instrumentation intercepts the three
  open() overloads so manage-threads is still enforced, and the QA
  actions use the factories. Removed the redundant main25 source set.

restricted native-access (FFM) warnings under -Werror:
- Targeted @SuppressWarnings("restricted") on the methods that call
  MemorySegment.reinterpret, Linker.downcallHandle/upcallStub,
  System.load/loadLibrary and Controller.enableNativeAccess across
  foreign-library, native, entitlement, esql compute and several tests.

Doclint reference errors:
- {@link primitive} is invalid; switched to {@code} for float, double,
  long, boolean, byte and double[] in grok, x-content, server and ml.
  Fixed the byte[] case in the mvdedupe template and regenerated.
- Corrected broken member links in JoinHelper,
  ClusterFormationFailureHelper and Multi